# hrtf_relearning

./: .gitignore  LICENSE  Localization.py  README.md  Training.py  aruco_pose.py  calibrate_setup.py  cli.py  experiment_procedure.py  header.rst  helper_functions.py  hrtf2rcx.py  hrtf_relearning.py  hrtf_training.py  kemar2rcx.py  localization_analysis.py  localization_test.py  participants.py  plots.py  pyproject.toml  record_hrtf.py  scratch.py  sources_KEMAR.txt  stats.py  test_sequence.pkl  test_setup.py  threshold_timbre_or_hrtf.txt  training.py  unnamed.patch  uso_localization_test.py  ve_localization_test.py  ve_training.py  ve_training_RP2.py
.metawear/: E1CD49190819.json  EF67447CBFBB.json
HRTF-measurement/: calibrate_setup.py  create_sofa.py  front_back_test.py  in-ear_record.py  read_sofa.py  record_DTF.py  record_hrtf.py  test_hrtf.py  write_hrtf.py
HRTF_measurement/: calibrate_dome.py  front_back_test.py  record_hrtf.py  test_hrtf.py
MSc/: hrtf_training.py  localization_test.py  uso_localization_test.py
Thesis/: methods.py  results.py  thesis_plot_collection.py
analysis/: azimuth_learning.py  behavior.py  build_dataframe.py  create_dataframe.py  get_dataframe.py  get_df.py  group_stats.py  hrtf_analysis.py  hrtf_correlation.py  hrtf_image.py  hrtf_plot.py  learning_plot.py  learning_stats.py  localization.py  localization_analysis.py  localization_plot.py  main_df.py  plots.py  plotting_functions.py  quick_look.py  stats_scratch.py  training.py  weekly_localization.py
analysis_results/: JS_elevation_by_block.csv  JS_elevation_by_game.csv  (+2 more)
(+1555 files in other folders)
