[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "hrtf_relearning"
version = "0.1.0"
dependencies = [
    "slab @ git+https://github.com/pfriedrich-hub/slab.git",
    "pybinsim @ git+https://github.com/pfriedrich-hub/pybinsim_tuil.git",
"h5py", "h5netcdf", "metawear", "pyqt5", "pynput", "pyfar"
]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
hrtf = "hrtf_relearning.cli:main"


